Fix bug on iPhone SE, found other bugs that will be fixed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -591,6 +591,13 @@ footer a:hover {
 
 }
 
+@media screen and (max-width: 375px) {
+	fieldset div {
+		padding-top: 15%;
+	}
+}
+
+
 
 /* Credit code (https://google-map-generator.com/) */
 
